增加对于java远程编译的提示